--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
                 <p>{{product.productName}}</p>
             </div>
             <div class="product-price flex-item">
-                <p>{{product.price}} ₹ </p>
+                <p>{{product.price}}</p>
             </div>
             <div class="product-quantity flex-item">
                 <p>{{product.stockQuantity}}</p>
