--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -10,10 +10,10 @@
                 <p>Name</p>
             </div>
             <div class="flex-item">
-                <p>Rate (1 Kg) </p>
+                <p>Price (INR) </p>
             </div>
             <div class="flex-item">
-                <p>Stock</p>
+                <p>Stock (QNty)</p>
             </div>
             <div class="flex-item">
                 <p>Config</p>
@@ -69,7 +69,7 @@
             <div class="flex-item">
                 <input
                     type="text"
-                    placeholder="enter price"
+                    placeholder="Enter Price"
                     class="form-control"
                     name="price"
                     [(ngModel)]="price"
@@ -78,7 +78,7 @@
             <div class="flex-item">
                 <input
                     type="text"
-                    placeholder="enter url"
+                    placeholder="Enter Url"
                     class="form-control"
                     name="productImageUrl"
                     [(ngModel)]="url"
@@ -88,7 +88,7 @@
             <div class="flex-item">
                 <input
                     type="text"
-                    placeholder="enter name"
+                    placeholder="Enter Name"
                     class="form-control"
                     name="productName"
                     [(ngModel)]="name"
@@ -97,7 +97,7 @@
             <div class="flex-item">
                 <input
                     type="text"
-                    placeholder="enter stock"
+                    placeholder="Enter Stock"
                     class="form-control"
                     name="stockQuantity"
                     [(ngModel)]="stock"
