--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,5 @@
-<app-nav-bar> </app-nav-bar>
+
+<app-navbar></app-navbar>
 
 <div class="cstm-dashboard-heading">
     <h4 style="font-family: cursive;" >Deals of the Day <i class="fa fa-shopping-bag"></i></h4>
