--- a/src/app/admin/admin-nav-bar/admin-nav-bar.component.css
+++ b/src/app/admin/admin-nav-bar/admin-nav-bar.component.css
@@ -3,7 +3,8 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   padding: 1.3rem;
-  background-color: black;
+  background-image: url(/assets/images/bg2.jpg);
+  /* background-color: black; */
 }
 
 .nav-left-custom {
@@ -16,7 +17,7 @@ a {
   text-decoration: none;
   padding: 1.5rem;
   padding-bottom: 1.4rem;
-  border-right: .5px solid black;
+  /* border-right: .5px solid black; */
 }
 
 a:hover, .active{
