--- a/src/app/admin/feedback/feedback.component.html
+++ b/src/app/admin/feedback/feedback.component.html
@@ -1,1 +1,34 @@
-<p>feedback works!</p>
+
+<body>
+    <app-admin-nav-bar></app-admin-nav-bar>
+<div class="table-users">
+    <div class="header">User - Queries</div>
+    
+    <table cellspacing="0">
+       <tr  >
+          <th style="color: black;font-weight: 400; font-family: cursive; align-items: center;">Name</th>
+          <th style="color: black;font-weight: 400; font-family: cursive;">Phone</th>
+          <th  style="color: black;font-weight: 400; font-family: cursive;" width="230">Comments</th>
+       </tr>
+ 
+       <tr>
+          <td>deva</td>
+          <td>7854698125</td>
+          <td>No. </td>
+       </tr>
+ 
+       <tr>
+            <td>deva</td>
+            <td>7854698125</td>
+            <td>No. </td>
+        </tr>
+
+        <tr>
+            <td> {{name1}}</td>
+            <td> {{mob}} </td>
+            <td> {{comments}}</td>
+         </tr>
+    
+    </table>
+ </div>
+</body>
