--- a/src/app/admin/vieworders/vieworders.component.css
+++ b/src/app/admin/vieworders/vieworders.component.css
@@ -10,10 +10,14 @@ p {
 
 .custom-card-header,.custom-card-body {
   display: flex;
+  background-image: url(/assets/images/bg5.jpg);
+  background-attachment: fixed;
+  /* background:white ; */
   flex-direction: row;
   align-items: center;
   margin: 1rem 0;
-  box-shadow: 0 0 5px 2px grey;
+  font-weight: 900;
+  box-shadow: 0 0 5px 2px rgb(19, 15, 248);
   padding: 1rem .2rem;
 }
 
