--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -7,9 +7,13 @@
   font-family: "Poppins" , sans-serif;
 }
 body{
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
-  background: #c8e8e9;
+  background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)) , url(/assets/images/bg8.jpg);
+  background-position: center;  
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background: #c8e8e9; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,7 +66,7 @@ body{
 .content .left-side .details .text-one,
 .content .left-side .details .text-two{
   font-size: 14px;
-  color: #afafb6;
+  color: #6262e9;
 }
 .container .content .right-side{
   width: 75%;
