--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,52 @@
 
-<footer class = "custom-footer">
-  <h5>&copy;B1ja02</h5>
-</footer>
+<body>
 
+  <div class="container">
+  
+      <form action="">
+  
+          <div class="row">
+  
+              <div class="col">
+  
+                  <h3 class="title">Confirm your Billing Address...</h3>
+  
+                  <div class="inputBox">
+                      <span>Full name :</span>
+                      <input #name type="text" placeholder="Deva Rohinth" required>
+                  </div>
+                  <div class="inputBox">
+                      <span>Email :</span>
+                      <input #mail type="email" placeholder="example@hotmail.com" required>
+                  </div>
+                  <div class="inputBox">
+                      <span>Address :</span>
+                      <input #add  type="text" placeholder="number - street - locality - city "  required>
+                  </div>
+                  
+                  <div class="inputBox">
+                    <span>Contact number :</span>
+                    <input #phone type="number" placeholder="879 987 9874 "  required>
+                </div>
+                  
+                  <div class="flex">
+                      <div class="inputBox">
+                          <span>State :</span>
+                          <input type="text" placeholder="Tamil nadu" required>
+                      </div>
+                      <div class="inputBox">
+                          <span>Zip code :</span>
+                          <input type="text" placeholder="123 456" required>
+                      </div>
+                  </div>
+  
+              </div>      
+          </div>
+
+          <button class="btnb" (click)="dialog()" >Generate Invoice <i class='fas fa-file-invoice-dollar'></i></button> 
+     
+      </form>
+  
+  </div>    
+      
+  </body>
