--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,123 +1,373 @@
- /* Styling the navbar with a trans background + padding */
-.navbar {
-    overflow: hidden;
-    background: transparent;
-    padding: 10px 10px;
-  }
-  
-  /* Style the header links */
-
-  .navbar a {
-    float: left;
-    color: rgb(248, 241, 241);
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-  
-  .navbar a.logo {
-    font-size: 25px;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
-}
-  
-  /* Change the background color on mouse-over */
-  .navbar a:hover {
-    background-color: dodgerblue;
-    color: rgb(233, 231, 238);
-  }
-  
-  /* Style the active/current link*/
-  .navbar a.active {
-    background-color: dodgerblue;
-    color: white;
-  }
-  
-  /* Float the link section to the right */
-  .navbar-right {
-    float: right;
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-
-   /* Style the navbar with a trans background and some padding */
-.navbar {
-    overflow: hidden;
-    background: transparent;
-    padding: 10px 10px;
-  }
-  
-  /* Style the header links */
-  .navbar a {
-    float: left;
-    color: rgb(248, 241, 241);
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
-  }
-  
-  /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-  .navbar a.logo {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  
-  /* Change the background color on mouse-over */
-  .navbar a:hover {
-    background-color: dodgerblue;
-    color: rgb(233, 231, 238);
-  }
-  
-  /* Style the active/current link*/
-  .navbar a.active {
-    background-color: dodgerblue;
-    color: white;
-  }
-  
-  /* Float the link section to the right */
-  .navbar-right {
-    float: right;
-  }
-
-  /*        Home           */
-
 .header
  {
    height: 100vh;
-   background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(/assets/images/sea4.jpg); 
+   background-image:url(/assets/images/bg6.jpg); /*linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),*/
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
-   padding-top: 20px;
+   padding-top: 10px;
    text-align: center;
-   color: #fff;
  }
-  .header h1
+ .header h1
  {
-   padding-top: 170px;
+   padding-top: 150px;
+   padding-right: 15cm;
    padding-bottom: 0;
-   font-size: 55px;
-   font-family: cursive;
+   font-size: 75px;
+   font-family:fantasy;
+   color: rgb(255, 255, 255);
  }
  .header p
  {
-   margin: 24px 0;
-   font-family: monospace;
+   color: rgb(240, 2, 2);  
+   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+   font-size: 15px;
+   position: absolute;
+   top: 5cm;
+   left: 7.8cm;
  }
+ .header img
+ {
+    top: 4cm;
+    left: 18cm;
+    position: absolute;
+    width: 380px;
+    height: 480px;  
+ }
+ .header1
+ {
+    text-align: center;
+     background-color:rgb(240, 2, 2);
+     height: 9vh;
+     width: 55vh;
+     position: absolute;
+     left: 7.8cm;
+     
+    
+ }
+ .header1 p
+ {
+   
+   color: rgb(241, 237, 237);  
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-size: 18px;
+   position: absolute;
+   top: 0.5cm;
+   left: 0.8cm;
+ }
+ .price
+{
+    width: 50px;
+    height: 50px;
+    background: rgb(245, 241, 241);
+    border-radius: 60%;
+    box-shadow: 0 0 10px 1px rgba(37,73,214,0.18);
+    position: absolute;
+    left: 8.5cm;
+    top: 0.1cm;
+    
+}
+.price p
+ {
+   
+   color: rgb(240, 2, 2);  
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-size: 15px;
+   position: absolute;
+   top: 0.1cm;
+   left: 0.1cm;
+   font-weight: bold;
+ }
+ /*--------------------------------------------------*/
  
- /*hover button css*/
- 
- .wrapper
+/*features*/
+
+.features
+{
+  padding: 100px 0;
+  height: 40em;
+  background-color:none;
+}
+.features h1
+{
+    font-family: cursive;
+    font-size:  40px;
+    text-align: center;
+    padding-bottom: 30px;
+    color: rgb(224, 164, 12);/*rgb(240, 2, 2);*/
+}
+/**/
+.flip-card {
+  background-color: transparent;
+  width: 280px;
+  height: 300px;
+  position: absolute;
+  left: 10vh;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+  
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: rgb(23, 23, 24);
+  color: white;
+  transform: rotateY(180deg);
+}
+/*1st card*/
+.flip-card1 {
+  background-color: transparent;
+  width: 280px;
+  height: 300px;
+  position: absolute;
+  left: 60vh;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+.flip-card1-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+.flip-card1:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card1-front, .flip-card1-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+.flip-card1-front {
+  background-color: #bbb;
+  color: black;
+}
+.flip-card1-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+/*2nD card*/
+.flip-card2 {
+  background-color: transparent;
+  width: 280px;
+  height: 300px;
+  position: absolute;
+  left: 110vh;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+.flip-card2-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+.flip-card2:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card2-front, .flip-card2-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+.flip-card2-front {
+  background-color: #bbb;
+  color: black;
+}
+.flip-card2-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+/*3rD card*/
+.flip-card3 {
+  background-color: transparent;
+  width: 280px;
+  height: 300px;
+  position: absolute;
+  left: 160vh;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+.flip-card3-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+.flip-card3:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card3-front, .flip-card3-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+.flip-card3-front {
+  background-color: #bbb;
+  color: black;
+}
+.flip-card3-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+.rating
+{
+  padding: 3px;
+  float: right;
+  color: yellow;  
+  align-items: center;
+  position: absolute;
+  right: 30%;
+} 
+
+/*ingrediants*/
+.ingrediants
+{
+  padding: 100px 0;
+  height: 60em;
+  background-color: rgb(0, 0, 5);
+}
+.ingrediants img
+{
+  align-items: center;
+  left: 10cm;
+  position: absolute;
+}
+
+/*      Banner        */
+
+.banner
+{
+    height: 50%;
+    background-image: url(src\assets\images\speaker.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    padding-top: 10%;
+}
+.banner-highlights
+{
+    margin-top: 1cm;
+    margin-bottom: 1cm;
+    padding: 1.5cm;
+    background: rgba(0,0,0,0.7);
+    text-align: center;
+    color: #fff;   
+}
+.booking-btn
+{
+      width: 180px; 
+      padding: 8px 0;
+      background-image:linear-gradient(#00ff7e,#1f3d90);
+      border: 0 !important;
+      color: #fff !important;
+      margin-top: 20px;
+      font-size: 100%;
+      cursor:pointer;
+      border-radius: 30px !important;
+      box-shadow: none !important;
+}
+.containerbb h2
+{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 34px;
+    font-weight: 100;
+}
+.containerbb h5
+{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+
+/* Style the links inside the sidenav */
+#mySidenav a {
+  position: absolute; /* Position them relative to the browser window */
+  left: -80px; /* Position them outside of the screen */
+  transition: 0.3s; /* Add transition on hover */
+  padding: 15px; /* 15px padding */
+  width: 100px; /* Set a specific width */
+  text-decoration: none; /* Remove underline */
+  font-size: 20px; /* Increase font size */
+  color: white; /* White text color */
+  border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
+}
+
+#mySidenav a:hover {
+  left: 0; /* On mouse-over, make the elements appear as they should */
+}
+
+/* The about link: 20px from the top with a green background */
+#twitter {
+  bottom: -1020px;
+  background-color: rgb(253, 250, 250);
+}
+
+#youtube {
+  bottom: -1080px;
+  background-color: rgb(253, 250, 250); /* Blue */
+}
+
+#whatsapp {
+  bottom: -1140px;
+  background-color: rgb(253, 250, 250); /* Red */
+}
+
+#Email {
+  bottom: -1200px;
+  background-color: rgb(253, 250, 250); /* Light Black */
+}
+
+
+/*neon button*/
+.wrapper
  {
   justify-content: center;
   align-items: center;
@@ -160,7 +410,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg,transparent,#03e9f4);
+  background: linear-gradient(90deg,transparent,#03e9f4); 
   animation: animate1 1s linear infinite;
 }
 @keyframes animate1{
@@ -223,185 +473,6 @@
   }
 }
 
-/*features*/
-
-.features
-{
-  padding: 100px 0;
-}
-h1
-{
-    font-family: cursive;
-    font-size:  40px;
-    text-align: center;
-    padding-bottom: 30px;
-}
-.feature-img img
-{
-  width: 100%;
-}
-.price
-{
-    width: 50px;
-    height: 50px;
-    background: #ff5722;
-    color:#fff;
-    font-weight: 400;
-    border-radius: 50%;
-    padding: 10px;
-    box-shadow: 0 0 10px 1px rgba(37,73,214,0.18);
-    position: absolute;
-    left: 20px;
-    bottom:-25px;
-}
-.feature-img
-{
-  position: relative;
-}
-.rating
-{
-  padding: 3px;
-  float: right;
-  background: #fff;
-  bottom: -1px;
-  right: 0;
-  position: absolute;
-}
-.features .fas 
-{
-    font-size: 15px;
-    color: #ff5722;
-}
-       .feature-details
-        {
-            padding: 20px;
-            text-align: justify;
-        }
-
-        .feature-details h4
-        {
-        font-weight: bolder;
-        font-size: 20px;
-        margin-top:20px;
-        font-family: sans-serif;
-        
-        }
-        .feature-details .fas
-        {
-            margin-right: 5px;
-            
-        }
-
-        .feature-box
-        {
-            box-shadow: 0 0 200px 1px rgba(37,73,214,0.18);
-            margin-bottom:30px;
-        }
-
-/*           gallery       */
-
-.gallery
-{   
-    padding: 100px 0;
-    background: #efefef;
-}
-.gallery h1
-{   
-    text-align: center;
-    font-family: cursive;
-    font-size: 40px;
-}
-.gallery-box img
-{
-    width: 100%;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-.gallery-box img:hover
-{
-    transform: scale(1.1);
-}
-.gallery-box h4
-{
-   display: block;
-   color: #fff;
-   text-shadow: -2px 20px 2px #000;
-   font-weight: 600;
-   font-size: 20px;
-   position: absolute;
-   top: 50%;
-   left:50%;
-   transform: translate(-50%,-50%);
-}
-.gallery-box
-{
-    position: relative;
-    margin-bottom: 30px;
-}
-.gallery button
-{ 
-    width: 100px;
-    padding: 8px 0;
-    outline:none !important;
-    border: none !important;
-    border-radius: 30px;
-    background:transparent;
-    color:royalblue;
-    font-style: oblique;
-    float: right;
-}
-.gallery button:hover
-{
-    transform: scale(1.1);
-}
-
-/*      Banner        */
-
-.banner
-{
-    height: 80%;
-    background-image: url(src\assets\images\banner3.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-   padding-top: 10%;
-}
-.banner-highlights
-{
-    margin-top: 1cm;
-    margin-bottom: 1cm;
-    padding: 1.5cm;
-    background: rgba(0,0,0,0.7);
-    text-align: center;
-    color: #fff;   
-}
-.booking-btn
-{
-      width: 180px; 
-      padding: 8px 0;
-      background-image:linear-gradient(#00ff7e,#1f3d90);
-      border: 0 !important;
-      color: #fff !important;
-      margin-top: 20px;
-      font-size: 100%;
-      cursor:pointer;
-      border-radius: 30px !important;
-      box-shadow: none !important;
-}
-.containerbb h2
-{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 34px;
-    font-weight: 100;
-}
-.containerbb h5
-{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-}
-
 /* user */
 
 .users-feedback
@@ -441,13 +512,12 @@ h1
     margin: -30px 0 20px 40%; /*for image to box line*/
 }
 
-
 /* footer */
 
 .footer
 {
   padding: 100px 20px 15px;
-  background-image:linear-gradient(#2d557d,#9610fb);
+  background-color:#111010 ;/*linear-gradient(#3a4101,#08000e); #2d557d,#9610fb*/
   color: #fff;
 }
 .footer h2
@@ -488,4 +558,51 @@ h1
 .footer .copyright
 {
     text-align: center;
+}
+
+/*
+nav bar
+
+*/
+
+.navbar {
+  background: transparent;
+  padding: 10px 10px;
+}
+
+/* Style the header links */
+
+.navbar a {
+  float: left;
+  color: rgb(248, 245, 245);
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 20px;
+  font: weight 400px;;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+
+.navbar a.logo {
+  font-size: 25px;
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+}
+
+/* Change the background color on mouse-over */
+.navbar a:hover {
+  background-color: antiquewhite;
+  color: rgb(240, 2, 2);
+  border-radius: 24px;
+}
+  
+/* Float the link section to the right */
+.navbar-right {
+  float: right;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
 }
