--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -1,69 +1,133 @@
-
-
-.custom-align-center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.custom-body {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: center;
-}
-
-.custom-body-left-child {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.custom-body-right-child {
-  width: 50%;
-}
-
-form {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-}
-
-img {
-  width: 80%;
-}
-
-.mb-25 {
-  margin-bottom: 1rem;
-}
-
-.mu-25 {
-  margin-top: 1rem;
-}
-
-
-.input-design {
-  border: none;
-  border-bottom: 2px solid black;
-  border-radius: 0;
-  border-left: none;
-}
-
 .form-control:focus {
   border-color: #FF0000;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
 
-.h3-align-center {
-  text-align: center;
-  margin-bottom: 5rem;
+body {
+	color: #999;
+	background: #f5f5f5;
+	font-family: 'Roboto', sans-serif;
+}
+.form-control, .form-control:focus, .input-group-addon {
+	border-color: #e1e1e1;
+	border-radius: 0;
+}
+.signup-form {
+	width: 390px;
+	margin: 0 auto;
+	padding: 150px 0;
+	
+}
+.signup-form h2 {
+	color: #6559a8;
+	font-family:  cursive;
+	margin: 0 0 15px;
+	text-align: center;
+}
+.signup-form .lead {
+	font-size: 14px;
+	margin-bottom: 30px;
+    color: #000008;
+	text-align: center;
+}
+.signup-form form {		
+	border-radius: 24px;
+	margin-bottom: 15px;
+	background: #fff;
+	border: 1px solid #f3f3f3;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	padding: 30px;
+}
+.signup-form .form-group {
+	margin-bottom: 20px;
+}
+.signup-form label {
+	font-weight: normal;
+	font-size: 13px;
+}
+.signup-form .form-control {
+	min-height: 38px;
+	box-shadow: none !important;
+	border-width: 0 0 1px 0;
+}	
+.signup-form .input-group-addon {
+	max-width: 42px;
+	text-align: center;
+	background: none;
+	border-bottom: 1px solid #e1e1e1;
+	padding-left: 5px;
+}
+.signup-form .btn, .signup-form .btn:active {        
+	font-size: 16px;
+	font-weight: bold;
+	background: #19aa8d !important;
+	border-radius: 3px;
+	border: none;
+	min-width: 140px;
+}
+.signup-form .btn:hover, .signup-form .btn:focus {
+	background: #179b81 !important;
+}
+.signup-form a {
+	color: #19aa8d;
+	text-decoration: none;
+}	
+.signup-form a:hover {
+	text-decoration: underline;
+}
+.signup-form .fa {
+	font-size: 21px;
+	position: relative;
+	top: 8px;
+}
+.signup-form .fa-paper-plane {
+	font-size: 17px;
+}
+.signup-form .fa-check {
+	color: #fff;
+	left: 9px;
+	top: 18px;
+	font-size: 7px;
+	position: absolute;
 }
 
-.login-btn {
-  width: 100px;
-  align-self: center;
-  margin-top: .2rem;
+.hero
+{
+  height: 100%;
+  background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(/assets/images/bg8.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  padding-top: 20px;
+  text-align: center;
+  color:cadetblue;
 }
+.hero img
+{
+    float: left;
+    width: 100px;
+
+}
+/* .backvideo{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  
+}
+@media (min-aspect-ratio:16/9) {
+  .backvideo
+  {
+    width: 100%;
+    height: auto;
+  }
+  
+}
+
+@media (max-aspect-ratio:16/9) {
+  .backvideo
+  {
+    width: auto;
+    height: 100%;
+  }
+  
+} */
