--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,14 +1,18 @@
-<div class="container custom-align-center">
+<body class="hero">
 
-    <div class="custom-body">
-        <div class="custom-body-left-child">
-            <form autocomplete="off" (ngSubmit)="onSubmit(f)" #f="ngForm">
-                <h3 class = "h3-align-center">LOGIN</h3>
-                <div class="form-group mb-25">
-                   
-                    <input
+    <div class="container" >
+        <img src="/assets/images/logo3.png">
+    </div>   
+
+   <div class="signup-form">	
+        <form autocomplete="off" (ngSubmit)="onSubmit(f)" #f="ngForm">
+            <h2>Sign In</h2>
+            <div class="form-group">
+			<div class="input-group">
+				<span class="input-group-addon"><i class="fa fa-user"></i></span>
+                <input
                         type="email"
-                        class="form-control input-design"
+                        class="form-control"
                         [ngClass]="{'is-invalid': f?.controls?.['username']?.touched ? !emailValidity(f.value.username) : false}"
                         aria-describedby="emailHelp"
                         [placeholder]="'Enter email'"
@@ -16,47 +20,33 @@
                         name="username"
                     >
                 </div>
-                <div class="form-group mb-25">
+            </div>
+
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
                     <input
-                        type="password"
-                        class="form-control input-design"
-                        [ngClass]="{'is-invalid': f?.controls?.['password']?.touched ? !passwordValidity(f.value.password) : false}"
-                        placeholder="Password"
-                        ngModel
-                        name="password"
-                    >
+                    type="password"
+                    class="form-control"
+                    [ngClass]="{'is-invalid': f?.controls?.['password']?.touched ? !passwordValidity(f.value.password) : false}"
+                    placeholder="Password"
+                    ngModel
+                    name="password"
+                > 
                 </div>
-
-                <!-- <div>
-                    <app-otp></app-otp>
-                </div> -->
-
-                <div class="form-group mb-25 mu-25">
-                    <a
-                        href
-                        class="link-secondary"
-                        routerLink="/users/signup"
-                    >
-                        Dont have an account? Sign up here
-                    </a>
-                </div>
-
-                <button
-                    type="submit"
-                    class="btn btn-primary login-btn"
-                    [disabled]="!((emailValidity(f.value.username) && passwordValidity(f.value.password)))"
-
-                >
-                    Login
-                </button>
-            </form>
+            </div>
             
-        </div>
-        <div class="custom-body-right-child">
-            <img
-                src="assets/images/login_vector.jpg"
-                alt
+                
+		<div class="form-group">
+        <button
+            type="submit"
+            class="btn btn-primary login-btn"
+            [disabled]="!((emailValidity(f.value.username) && passwordValidity(f.value.password)))"
             >
+            Login
+        </button>
         </div>
-    </div>
-</div>
+    </form>
+    <div class="text-center">Don't have an account? <a (click)="signin()">signup here</a>.</div>
+  </div>
+</body>
