--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,41 +1,88 @@
-/* #signup-header {
-  height: 80vh; 
-} */
-
-/* .custom-signup-header-body{
-  height: 100%;
-  background: url('/assets/images/food-image.jpg') no-repeat center center/cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-
-
-/* .custom-main-heading {
-  color: #fff;
-  font-size: 2rem;
-  letter-spacing: 1rem;
-} */
-
-
-/* .custom-margin-bottom-2rem {
-  margin-top: 3rem;
-  padding-bottom: 5rem;
-} */
-
-
-
-#signup-body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.signup-form {
+	width: 400px;
+	margin: 0 auto;
+    position: absolute;
+    left: 12.1cm;
+    top: 0.5cm;
+	padding: 30px 0;
+    
 }
+.signup-form h2 {
+	color: #6559a8;
+	margin: 0 0 15px;
+	text-align: center;
+	font-family:  cursive;
+}
+.signup-form .lead {
+	font-size: 14px;
+	margin-bottom: 30px;
+    color: #000008;
+	text-align: center;
+}
+.signup-form form {		
+	border-radius: 10px;
+	margin-bottom: 15px;
+	background: #fff;
+	border: 1px solid #f3f3f3;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	padding: 30px;
 
-/* .custom-align-center {
-  width: 50%;
+}
+.signup-form .form-group {
+	margin-bottom: 20px;
+}
+.signup-form label {
+	font-weight: normal;
+	font-size: 13px;
+}
+.signup-form .form-control {
+	min-height: 38px;
+	box-shadow: none !important;
+	border-width: 0 0 1px 0;
+}	
+.signup-form .input-group-addon {
+	max-width: 42px;
+	text-align: center;
+	background: none;
+	border-bottom: 1px solid #e1e1e1;
+	padding-left: 5px;
+}
+.signup-form .btn, .signup-form .btn:active {        
+	font-size: 16px;
+	font-weight: bold;
+	background: #19aa8d !important;
+	border-radius: 3px;
+	border: none;
+	min-width: 140px;
+}
+.signup-form .btn:hover, .signup-form .btn:focus {
+	background: #179b81 !important;
+}
+.signup-form a {
+	color: #19aa8d;
+	text-decoration: none;
+}	
+.signup-form a:hover {
+	text-decoration: underline;
+}
+.signup-form .fa {
+	font-size: 21px;
+	position: relative;
+	top: 8px;
+}
+.signup-form .fa-paper-plane {
+	font-size: 17px;
+}
+.signup-form .fa-check {
+	color: #fff;
+	left: 9px;
+	top: 18px;
+	font-size: 7px;
+	position: absolute;
+}
+/* 
 } */
+
 
 .custom-margin-1rem {
   margin: 1rem;
@@ -43,8 +90,8 @@
 
 
 .form-control:focus {
-  border-color: #FF0000;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+  border-color: #1900ff;
+  box-shadow: inset 0 1px 1px rgba(233, 198, 198, 0.075), 0 0 8px rgba(38, 0, 255, 0.6);
 }
 
 .input-design {
@@ -54,27 +101,36 @@
   border-left: none;
 }
 
-.container {
-  display: flex;
-  flex-direction: row;
+.hero
+{
+  height: 100vh;
+  background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(/assets/images/bg8.jpg); /* bg2.jpg */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  padding-top: 20px;
+  text-align: center;
+  color:cadetblue;
 }
-
-.custom-left-child {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.hero img
+{
+    float: left;
+    width: 100px;
+    
 }
-
-.custom-right-child {
-  width: 60%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.login-btn
+{
+    width: 100px;
+    padding: 8px 0;
+    outline: none !important;
+    border: none !important;
+    border-radius: 50px;
+    background: transparent;
+    color: #fff;
+    float: right;
 }
-
-form {
-  width: 80%;
+.form-control, .form-control:focus, .input-group-addon {
+	border-color: #e1e1e1;
+	border-radius: 0;
 }
